--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 numpy >= 1.11
 pandas >= 0.18
 scikit-learn >= 0.17
-scipy >=
 
 # Pip Only Packages
 tensorflow >= 1.0
 keras >= 1.2.2
+sortedcontainers >= 1.5.7
