--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # Anaconda Supported Packages
+click >= 6.6
 filelock >= 2.0
 numpy >= 1.11
 pandas >= 0.18
 scikit-learn >= 0.17
 
 # Pip Only Packages
+Flask >= 0.11.1
+Flask-AutoIndex >= 0.6
 keras >= 1.2.2
 sortedcontainers >= 1.5.7
 watchdog >= 0.8.3
