--- a/mlcomp/persist/board/frontend/package.json
+++ b/mlcomp/persist/board/frontend/package.json
@@ -21,15 +21,19 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-runtime": "^6.23.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0-rc.1",
     "file-loader": "^0.10.0",
+    "font-awesome": "^4.7.0",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
+    "keen-ui": "^1.0.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "moment": "^2.17.1",
     "node-sass": "^4.4.0",
     "normalize.css": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -37,12 +41,14 @@
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "tether": "^1.4.0",
     "transform-runtime": "0.0.0",
     "url-loader": "^0.5.7",
     "vue": "^2.1.10",
     "vue-loader": "^11.0.0",
     "vue-router": "^2.2.1",
     "vue-template-compiler": "^2.1.10",
+    "vuex": "^2.2.1",
     "webpack": "^2.2.0"
   }
 }
