--- a/mlcomp/persist/board/frontend/package.json
+++ b/mlcomp/persist/board/frontend/package.json
@@ -30,10 +30,12 @@
     "font-awesome": "^4.7.0",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
-    "keen-ui": "^1.0.0",
+    "keycode": "^2.1.8",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.17.1",
+    "muse-ui": "^2.0.0-rc.5",
     "node-sass": "^4.4.0",
     "normalize.css": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -41,14 +43,12 @@
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "tether": "^1.4.0",
     "transform-runtime": "0.0.0",
     "url-loader": "^0.5.7",
     "vue": "^2.1.10",
     "vue-loader": "^11.0.0",
     "vue-router": "^2.2.1",
     "vue-template-compiler": "^2.1.10",
-    "vuex": "^2.2.1",
     "webpack": "^2.2.0"
   }
 }
