--- a/mlcomp/persist/board/frontend/package.json
+++ b/mlcomp/persist/board/frontend/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "^2.0.0-rc.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^2.6.2",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
     "keycode": "^2.1.8",
@@ -42,6 +43,7 @@
     "postcss-loader": "^1.2.2",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
+    "store": "^2.0.4",
     "style-loader": "^0.13.1",
     "transform-runtime": "0.0.0",
     "url-loader": "^0.5.7",
