--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click >= 6.6
 filelock >= 2.0
 numpy >= 1.11
 pandas >= 0.18
+pillow >= 4.1.0
 scikit-learn >= 0.17
 
 # Pip Only Packages
@@ -11,3 +12,4 @@ sortedcontainers >= 1.5.7
 watchdog >= 0.8.3
 qualname >= 0.1.0
 awesome-slugify >= 1.6.5
+python-magic >= 0.4.13
