--- a/mlcomp/persist/board/frontend/package.json
+++ b/mlcomp/persist/board/frontend/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "^2.6.2",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
+    "katex": "^0.7.1",
     "keycode": "^2.1.8",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
