--- a/mlcomp/persist/board/frontend/package.json
+++ b/mlcomp/persist/board/frontend/package.json
@@ -20,8 +20,10 @@
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "canvasjs": "^1.8.1",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
