--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-# Anaconda Supported Packages
+awesome-slugify >= 1.6.5
 click >= 6.6
 filelock >= 2.0
+Flask >= 0.11.1
+gunicorn >= 19.7.1
+nose >= 1.3.7
 numpy >= 1.11
 pandas >= 0.18
 pillow >= 4.1.0
+python-magic >= 0.4.13
+qualname >= 0.1.0
 scikit-learn >= 0.17
-
-# Pip Only Packages
-Flask >= 0.11.1
+six >= 1.10.0
 sortedcontainers >= 1.5.7
 watchdog >= 0.8.3
-qualname >= 0.1.0
-awesome-slugify >= 1.6.5
-python-magic >= 0.4.13
-six >= 1.10.0
