--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas >= 0.18
 pillow >= 4.1.0
 python-magic >= 0.4.13
 qualname >= 0.1.0
+scipy >= 0.18.1
 scikit-learn >= 0.17
 six >= 1.10.0
 sortedcontainers >= 1.5.7
