--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ python:
   - "3.6"
 install:
   # Build/test dependencies
+  - pip install 'scipy>=0.18'
   - pip install -r requirements.txt
   # Install scripts provided by MLComp
   - pip install -e .
 env:
   - MLCOMP_TESTING=1
-script: 
+script:
   # Unit tests
   - nosetests .
