--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,27 @@
 language: python
+sudo: false
 python:
-  - "2.7_with_system_site_packages"
+  - "2.7"
   - "3.5"
-  - "3.6"
+
+# setup anaconda
 before_install:
-  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+
 install:
   # Build/test dependencies
-  - pip install -r requirements.txt
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION "click>=6.6" "pandas>=0.18" "pillow>=4.1.0" "nose>=1.3.7" "numpy>=1.11" "scipy>=0.18" "scikit-learn>=0.17" "six>=1.10.0"
+  - python -m pip install "awesome-slugify>=1.6.5" "coverage>=4.3.4" "filelock>=2.0" "Flask>=0.11.1" "python-magic>=0.4.13" "gunicorn>=19.7.1" "qualname>=0.1.0" "sortedcontainers>=1.5.7" "watchdog>=0.8.3" "zipstream>=1.1.4"
   # Install scripts provided by MLComp
-  - pip install -e .
+  - python -m pip install -e .
+
 env:
   - MLCOMP_TESTING=1
+
 script:
   # Unit tests
   - nosetests .
