--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
-awesome-slugify >= 1.6.5
+# anaconda packages
 click >= 6.6
-filelock >= 2.0
-Flask >= 0.11.1
-gunicorn >= 19.7.1
-nose >= 1.3.7
-numpy >= 1.11
 pandas >= 0.18
 pillow >= 4.1.0
-python-magic >= 0.4.13
-qualname >= 0.1.0
+nose >= 1.3.7
+numpy >= 1.11
 scipy >= 0.18
 scikit-learn >= 0.17
 six >= 1.10.0
+
+# pip-only packages
+awesome-slugify >= 1.6.5
+coverage >= 4.3.4
+filelock >= 2.0
+Flask >= 0.11.1
+python-magic >= 0.4.13
+gunicorn >= 19.7.1
+qualname >= 0.1.0
 sortedcontainers >= 1.5.7
 watchdog >= 0.8.3
 zipstream >= 1.1.4
