--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,25 @@ python:
   - "2.7"
   - "3.5"
 
-# setup anaconda
-before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda update --yes conda
-
 install:
-  # Build/test dependencies
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update --yes -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # install python dependencies
   - conda install --yes python=$TRAVIS_PYTHON_VERSION "click>=6.6" "pandas>=0.18" "pillow>=4.1.0" "nose>=1.3.7" "numpy>=1.11" "scipy>=0.18" "scikit-learn>=0.17" "six>=1.10.0"
   - python -m pip install "awesome-slugify>=1.6.5" "coverage>=4.3.4" "filelock>=2.0" "Flask>=0.11.1" "python-magic>=0.4.13" "gunicorn>=19.7.1" "qualname>=0.1.0" "sortedcontainers>=1.5.7" "watchdog>=0.8.3" "zipstream>=1.1.4"
-  # Install scripts provided by MLComp
-  - python -m pip install -e .
 
 env:
   - MLCOMP_TESTING=1
