--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ install:
   - conda info -a
 
   # install python dependencies
-  - conda install --yes -q python=$TRAVIS_PYTHON_VERSION "click>=6.6" "pandas>=0.18" "pillow>=4.0.0" "nose>=1.3.7" "numpy>=1.11" "scipy>=0.18" "scikit-learn>=0.17" "six>=1.10.0"
-  - python -m pip install -q "awesome-slugify>=1.6.5" "filelock>=2.0" "Flask>=0.11.1" "python-magic>=0.4.13" "gunicorn>=19.7.1" "qualname>=0.1.0" "sortedcontainers>=1.5.7" "watchdog>=0.8.3" "zipstream>=1.1.4" "coveralls>=1.1" "coverage>=4.3.4"
+  - conda install --yes -q python=$TRAVIS_PYTHON_VERSION
+  - python scripts/install-deps.py
 
 env:
   - MLCOMP_TESTING=1
@@ -32,4 +32,3 @@ script:
 
 after_success:
   - coveralls
-
