--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   # install python dependencies
   - conda install --yes -q python=$TRAVIS_PYTHON_VERSION
   - python scripts/install-deps.py
+  - python -m pip install "coveralls>=1.1"
 
 env:
   - MLCOMP_TESTING=1
