--- a/mlcomp/board/frontend/package.json
+++ b/mlcomp/board/frontend/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "fuse.js": "^2.6.2",
     "imports-loader": "^0.7.0",
+    "javascript-natural-sort": "^0.7.1",
     "jquery": "^3.1.1",
     "katex": "^0.7.1",
     "keycode": "^2.1.8",
@@ -39,7 +40,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.17.1",
     "muse-ui": "^2.0.0-rc.5",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "normalize.css": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.2.2",
